tests/positive/StdlibList/Data/Product.juvix
module Data.Product;

syntax fixity prod := binary;

syntax operator × prod;
type × (a : Type) (b : Type) := , : a → b → a × b;
